maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: ';' expected but 'else' found.
   else{avance(); droite();}
   ^Escaper:6: error: ';' expected but 'while' found.
}while (estSurBiscuit==false)
 ^Escaper:9: error: 'while' expected but '}' found.
} 
^